# PandaGPT

./: pyproject.toml  requirements.txt
pandagpt/model/: agent.py  openllama.py
pandagpt/model/ImageBind/: data.py
